--- a/index.html
+++ b/index.html
@@ -2,40 +2,50 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <title>Pumpkin Thief</title>
     <style>
       * { padding: 0; margin: 0; }
       canvas { background: #eee; display: block; margin: 0 auto; }
       .controls {
-        text-align: center;
-        margin-top: 10px;
+        width: 320px;
+        margin: 10px auto;
       }
-      .controls button {
-        width: 50px;
-        height: 50px;
+      .controls .btn {
+        float: left;
+        width: 100px;
+        height: 100px;
+        border-radius: 50px;
+        background: #FDE74C;
       }
     </style>
 </head>
 <body>
 
-<canvas id="myCanvas" width="320" height="480"></canvas>
+<canvas id="myCanvas" width="320" height="360"></canvas>
 <div class="controls">
-  <button onclick="moveLeft()"><</button>
-  <button onclick="moveRight()">></button>
+  <div class="btn" onclick="moveLeft()" style="margin-left: 30px;"></div>
+  <div class="btn" onclick="moveRight()" style="margin-left: 60px;"></div>
 </div>
 
 <script>
   var canvas = document.getElementById("myCanvas");
   var ctx = canvas.getContext("2d");
 
+  var controlsAreaWidth = 320;
+  var controlsAreaHeight = 120;
+  var controlsAreaOffsetTop = 360;
+
   var playerHeight = canvas.height/4; // @TODO unhardcode 4
-  var playerWidth = canvas.width/2; // @TODO unhardcode 4
+  var playerWidth = canvas.width/2; // @TODO unhardcode 2
+  var playerPosition = [true, false];
   var playerX = 0;
 
+  var canX, canY;
   var rightPressed = false;
   var leftPressed = false;
-  var fired = false;
+  var fired = 0;
+  var score = 0;
 
   var pumpkinRowCount = 4;
   var pumpkinColumnCount = 2;
@@ -74,12 +84,17 @@
   function keyDownHandler(e) {
     if(!fired) {
       if(e.keyCode == 39) {
-        playerX = canvas.width/2;
-        movePumpkins();
+        moveRight();
+        score++;
       }
       else if(e.keyCode == 37) {
-        playerX = 0;
-        movePumpkins();
+        moveLeft();
+        score++;
+      }
+
+      if (pumpkins.length === 4 && pumpkins[3].every(function(element, index) { return element === playerPosition[index]; })) {
+        alert("GAME OVER");
+        document.location.reload();
       }
 
       fired = true;
@@ -92,11 +107,13 @@
 
   function moveLeft() {
     playerX = 0;
+    playerPosition = [true, false];
     movePumpkins();
   }
 
   function moveRight() {
     playerX = canvas.width/2;
+    playerPosition = [false, true];
     movePumpkins();
   }
 
@@ -134,11 +151,17 @@
     }
   }
 
+  function drawScore() {
+    ctx.font = "16px Arial";
+    ctx.fillStyle = "#0095DD";
+    ctx.fillText("Score: "+score, 8, 20);
+  }
+
   function draw() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    // drawRoad();
     drawPumpkins();
     drawPlayer();
+    drawScore();
 
     requestAnimationFrame(draw);
   }
