--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         text-align: center;
       }
     </style>
+    <script src="https://cdn.ravenjs.com/3.7.0/raven.min.js"></script>
+    <script>Raven.config('https://e81b55572c1745f19207ae7c025f790f@sentry.io/109597').install()</script>
 </head>
 <body>
 
@@ -259,7 +261,7 @@
 
   binaryMap.forEach(function(row, y) { // TODO DRY (updateMap())
     row.forEach(function(type, x) {
-      if ( type != 0 ) {
+      if ( type != 0 )
         var item = new streetObject(type, x, y);
         streetObjects.push(item);
       }
