--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
   binaryMap.forEach(function(row, y) { // TODO DRY (updateMap())
     row.forEach(function(type, x) {
-      if ( type != 0 )
+      if ( type != 0 ) {
         var item = new streetObject(type, x, y);
         streetObjects.push(item);
       }
